data/derived/fa15/progs/unify/prog1246.ml.out
Characters 24-25:
  let _ = lift1 (!) (Some 2);;
                          ^
Error: This expression has type int but an expression was expected of type
         'a ref
